--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -6,7 +6,7 @@ phases:
   build:
     on-failure: CONTINUE
     commands:
-      - ./gradlewAll install
+      - ./gradlewAll publishToMavenLocal
     finally:
       - command
       - command
